tests/algorithms/x/C/graphs/breadth_first_search.c
// Generated by Mochi 0.10.32 on 2025-08-14 09:53 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t bfs_len;

static int contains_map_int(const int keys[], size_t len, int key) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) return 1;
    }
    return 0;
}

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%lld", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

typedef struct { int *keys; void **vals; size_t *lens; size_t len; size_t cap; } MapIL;

typedef struct { int *keys; int *vals; size_t len; size_t cap; } MapII;

static int map_get_ii(const int keys[], const int vals[], size_t len, int key) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) return vals[i];
    }
    return 0;
}

static void map_set_ii(int keys[], int vals[], size_t *len, int key, int val) {
    for (size_t i = 0; i < *len; i++) {
        if (keys[i] == key) { vals[i] = val; return; }
    }
    keys[*len] = key; vals[*len] = val; (*len)++;
}

static void* map_get_il(const int keys[], void *vals[], const size_t lens[], size_t len, int key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) { if (out_len) *out_len = lens[i]; return vals[i]; }
    }
    if (out_len) *out_len = 0;
    return NULL;
}

static void map_set_il(int keys[], void *vals[], size_t lens[], size_t *len, int key, void *val, size_t val_len) {
    for (size_t i = 0; i < *len; i++) {
        if (keys[i] == key) { vals[i] = val; lens[i] = val_len; return; }
    }
    keys[*len] = key; vals[*len] = val; lens[*len] = val_len; (*len)++;
}

static long long* list_append_int_new(const long long *arr, size_t len, long long val) {
    long long *res = malloc((len + 1) * sizeof(long long));
    if (arr && len) memcpy(res, arr, len * sizeof(long long));
    res[len] = val;
    return res;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

void add_edge(MapIL graph, long long from, long long to);
void print_graph(MapIL graph);
long long * bfs(MapIL graph, long long start);
int main(void);

void add_edge(MapIL graph, long long from, long long to) {
    if (contains_map_int(graph.keys, graph.len, from)) {
        map_set_il(graph_keys, graph_vals, graph_lens, &graph_len, from, list_append_int_new(map_get_il(graph_keys, graph_vals, graph_lens, graph_len, from, NULL), graph_lens[(int)(from)], to), graph_lens[from] + 1);
    } else {
        map_set_il(graph_keys, graph_vals, graph_lens, &graph_len, from, ({long long *tmp = malloc(1 * sizeof(long long)); tmp[0] = to; tmp;}), 1);
    }
}

void print_graph(MapIL graph) {
    for (size_t __i = 0; __i < graph.len; __i++) {
        int v = graph.keys[__i];
        long long *adj = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, v, NULL);
        size_t adj_len = graph_lens[v];
        const char* line = str_concat(str_int(v), "  :  ");
        long long i = 0LL;
        while (i < adj_len) {
            line = str_concat(line, str_int(adj[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? adj_len + _mochi_idx : _mochi_idx;})]));
            if (i < (adj_len - 1LL)) {
                line = str_concat(line, " -> ");
            }
            i = i + 1LL;
        }
        puts(line);
    }
}

long long * bfs(MapIL graph, long long start) {
    static int visited_keys[16] = {};
    static int visited_vals[16] = {};
    size_t visited_len = 0;
    MapII visited = { visited_keys, visited_vals, 0, 16 };
    long long *queue = NULL;
    size_t queue_len = 0;
    long long *order = NULL;
    size_t order_len = 0;
    queue = list_append_long_long(queue, &queue_len, start);
    map_set_ii(visited_keys, visited_vals, &visited_len, start, 1LL);
    long long head = 0LL;
    while (head < queue_len) {
        long long vertex = queue[(int)({long long _mochi_idx = head; _mochi_idx < 0 ? queue_len + _mochi_idx : _mochi_idx;})];
        head = head + 1LL;
        order = list_append_long_long(order, &order_len, vertex);
        long long *neighbors = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, vertex, NULL);
        size_t neighbors_len = graph_lens[vertex];
        long long i = 0LL;
        while (i < neighbors_len) {
            long long neighbor = neighbors[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? neighbors_len + _mochi_idx : _mochi_idx;})];
            if (!(contains_map_int(visited.keys, visited.len, neighbor))) {
                map_set_ii(visited_keys, visited_vals, &visited_len, neighbor, 1LL);
                queue = list_append_long_long(queue, &queue_len, neighbor);
            }
            i = i + 1LL;
        }
    }
    return bfs_len = order_len, order;
}

int main(void) {
    {
        long long __start = _now();
        static int g_keys[16] = {};
        static void* g_vals[16] = {};
        static size_t g_lens[16] = {};
        size_t g_len = 0;
        MapIL g = { g_keys, g_vals, g_lens, 0, 16 };
        add_edge(g, 0LL, 1LL);
        add_edge(g, 0LL, 2LL);
        add_edge(g, 1LL, 2LL);
        add_edge(g, 2LL, 0LL);
        add_edge(g, 2LL, 3LL);
        add_edge(g, 3LL, 3LL);
        print_graph(g);
        long long* __tmp1 = bfs(g, 2LL);
        puts(str_list_int(__tmp1, bfs_len));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
